force-app/main/default/objects/Work_Order_Payment__c/fields/Claim_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Paid_Date__c</fullName>
    <label>Claim Paid Date</label>
    <type>Date</type>
</CustomField>