force-app/main/default/objects/Work_Order_Payment__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Entered</fullName>
            </value>
            <value>
                <fullName>info Required</fullName>
            </value>
            <value>
                <fullName>Waiting on Approval</fullName>
            </value>
            <value>
                <fullName>Waiting on Credit</fullName>
            </value>
            <value>
                <fullName>Waiting on Return Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>