force-app/main/default/objects/Work_Order_Payment__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Note</label>
    <referenceTo>Credit_Note__c</referenceTo>
    <relationshipLabel>Work Order Payments</relationshipLabel>
    <relationshipName>Work_Order_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>