force-app/main/default/objects/Work_Order_Payment__c/fields/ProcessorApprovalCode__c.field-meta.xml
<CustomField>
    <fullName>ProcessorApprovalCode__c</fullName>
    <label>ProcessorApprovalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>