force-app/main/default/objects/Work_Order_Payment__c/fields/QB_WorkOrder_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_WorkOrder_ID__c</fullName>
    <formula>Related_to_Warranty_Work_Work_Order__r.QBInvoiceID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QB WorkOrder ID</label>
    <type>Text</type>
</CustomField>