force-app/main/default/objects/Work_Order_Payment__c/fields/QuickBook_WO_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>QuickBook_WO_Payment_ID__c</fullName>
    <label>QuickBook WO Payment ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>