force-app/main/default/objects/Work_Order_Payment__c/fields/Related_to_Warranty_Work_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Warranty_Work_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Warranty/Work Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipName>Work_Order_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>