force-app/main/default/objects/Work_Order_Payment__c/fields/Send_Payment_to_QB__c.field-meta.xml
<CustomField>
    <fullName>Send_Payment_to_QB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Payment to QB</label>
    <type>Checkbox</type>
</CustomField>