force-app/main/default/objects/Work_Order_Payment__c/fields/WO_Closed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>WO_Closed_Date_Time__c</fullName>
    <formula>Related_to_Warranty_Work_Work_Order__r.ClosedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WO Closed Date/Time</label>
    <type>DateTime</type>
</CustomField>