force-app/main/default/objects/Work_Order_Payment__c/fields/Work_Order_Job__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Job</label>
    <referenceTo>Work_Order_Job__c</referenceTo>
    <relationshipLabel>Work Order Payments</relationshipLabel>
    <relationshipName>Work_Order_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>